bin/test/errors/render-errors.t/non-scalar.mustache
Title: {{title}}

List:
{{list}}
  - {{data}}

Group:
{{#group}}
  {{group.first}}
  {{second}}
{{/group}}

{{#name}}The variable "name" has value "{{name}}".{{/name}}
{{^name}}The variable "name" is not set. {{/name}}

Last line.